tests/fixtures/invalid/switch_case_missing_colon.c
int main() {
    int value = 1;
    switch (value) {
    case 1
        return 1;
    default:
        return 0;
    }
}
